<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="5dp"
    >

    <LinearLayout
        android:id="@+id/daysOfWeek_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"
        android:orientation="horizontal"
        android:paddingStart="6dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toTopOf="@id/calendarRecyclerViewHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11sp" />

    </LinearLayout>

    <!--    Calendar Recycler View Holder -->

    <RelativeLayout
        android:id="@+id/calendarRecyclerViewHolder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/actionButtons_ib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daysOfWeek_tv"
        app:layout_constraintVertical_weight="9"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </RelativeLayout>
    <!--    END - Calendar Recycler View Holder -->

    <!--    Action Buttons -->
    <LinearLayout
        android:id="@+id/actionButtons_ib"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarRecyclerViewHolder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight=".7"
        >

        <ImageButton
            android:id="@+id/custom_calendar_left_chevron"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_chevron"
            android:foregroundGravity="left"
            app:tint="#BEBEBE"
            android:src="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:id="@+id/customCalendarMonthYear_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="NOV 2021"
            android:gravity="center"
            android:text="NOV 2021"
            android:textStyle="bold"
            android:textColor="#de5a54"
            android:textSize="11sp"
            />

        <ImageButton
            android:id="@+id/custom_calendar_right_chevron"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/right_chevron"
            android:foregroundGravity="right"
            app:tint="#BEBEBE"
            android:src="@drawable/ic_baseline_chevron_right_24" />
    </LinearLayout>
    <!--  END  Action Buttons -->


</androidx.constraintlayout.widget.ConstraintLayout>