<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customSpinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/autoComplete_SpinnerTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:textColor="#f55547"
        tools:ignore="LabelFor"
        android:hint="@string/choose_workout"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/custom_spinner_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        tools:ignore="UseCompoundDrawables"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#C70000"
            android:layout_weight=".85"
            />

        <ImageView
            android:id="@+id/spinner_delete_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foregroundGravity="bottom"
            android:contentDescription="@string/delete_icon"
            android:src="@drawable/ic_baseline_delete_outline_24"
            android:layout_weight=".15"
            />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>