<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/workOutSummaryCardView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="15dp"
            android:maxHeight="250dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toTopOf="@id/bodyDiagramCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/holdingText"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:text="@string/workout_summary"
                    app:layout_constraintBottom_toTopOf="@id/add_workout_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/workoutSummaryRecyclerView"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintBottom_toTopOf="@id/add_workout_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_home_date_tv" />


                <TextView
                    android:id="@+id/fragment_home_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:textColor="#949494"
                    android:textSize="11sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/workoutSummaryRecyclerView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Date" />

                <Button
                    android:id="@+id/add_workout_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop=".2dp"
                    android:layout_marginBottom="-6dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/add_workout"
                    android:textColor="#de5a54"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bodyDiagramCardView"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workOutSummaryCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/frontBodyDiagramFrame"
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/backBodyDiagramFrame"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/frontBodyDiagram"
                        android:layout_width="175dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/muscle_diagram"
                        android:cropToPadding="false"
                        android:scaleX="2"
                        android:scaleY="2"
                        android:scrollX="-38dp"
                        android:background="#ffffff"
                        android:src="@drawable/bodydiagram_blank" />
                </FrameLayout>


                <FrameLayout
                    android:id="@+id/backBodyDiagramFrame"
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/frontBodyDiagramFrame"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/backBodyDiagram"
                        android:layout_width="175dp"
                        android:layout_height="match_parent"
                        android:cropToPadding="false"
                        android:scaleX="2"
                        android:scaleY="2"
                        android:scrollX="50dp"
                        android:background="#ffffff"
                        android:src="@drawable/bodydiagram_blank" />
                </FrameLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- Custom Calendar -->
        <androidx.cardview.widget.CardView
            android:id="@+id/calendarCardView"
            android:layout_width="350dp"
            android:layout_height="215dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bodyDiagramCardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include layout="@layout/custom_calendar" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>